faltan msj calendario calificar reportes

--- a/ProyectoGrado/web/actividades/actualizar.xhtml
+++ b/ProyectoGrado/web/actividades/actualizar.xhtml
@@ -40,7 +40,7 @@
 
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Actualizar" ajax="false" action="#{actividadesController.actualizar()}"/>
+                            <p:commandButton id="btngrabar" value="Actualizar" ajax="true" action="#{actividadesController.actualizar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>  
