--- a/ProyectoGrado/web/clases/actualizar.xhtml
+++ b/ProyectoGrado/web/clases/actualizar.xhtml
@@ -49,7 +49,7 @@
                         </p:selectOneMenu>
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Actualizar" ajax="false" action="#{clasesController.actualizar()}"/>
+                            <p:commandButton id="btngrabar" value="Actualizar" ajax="true" action="#{clasesController.actualizar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>
