--- a/ProyectoGrado/web/convenciones/actualizar.xhtml
+++ b/ProyectoGrado/web/convenciones/actualizar.xhtml
@@ -27,7 +27,7 @@
                         <p:colorPicker id="color" value="#{convencionesController.campo.color}" />  
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Actualizar" ajax="false" action="#{convencionesController.actualizar()}"/>
+                            <p:commandButton id="btngrabar" value="Actualizar" ajax="true" action="#{convencionesController.actualizar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel> 
