--- a/ProyectoGrado/web/docentes/crear.xhtml
+++ b/ProyectoGrado/web/docentes/crear.xhtml
@@ -57,7 +57,7 @@
                         <p:inputText id="correo" required="true" value="#{docentesController.campo.correo}"/> 
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{docentesController.agregar()}"/>
+                            <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{docentesController.agregar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>
