--- a/ProyectoGrado/web/convenciones/crear.xhtml
+++ b/ProyectoGrado/web/convenciones/crear.xhtml
@@ -26,7 +26,7 @@
                         <p:colorPicker id="color" value="#{convencionesController.campo.color}" /> 
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{convencionesController.agregar()}" oncomplete="PF('dlg').show();" update="grid"/>
+                            <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{convencionesController.agregar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>
