--- a/ProyectoGrado/web/docentes/actualizar.xhtml
+++ b/ProyectoGrado/web/docentes/actualizar.xhtml
@@ -56,7 +56,7 @@
                         <p:inputText id="correo" required="true" value="#{docentesController.campo.correo}"/> 
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Actualizar" ajax="false" action="#{docentesController.actualizar()}"/>
+                            <p:commandButton id="btngrabar" value="Actualizar" ajax="true" action="#{docentesController.actualizar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>  
