Modifique de nuevo la bd Modifique el controller de las clases

--- a/ProyectoGrado/web/index_docentes.xhtml
+++ b/ProyectoGrado/web/index_docentes.xhtml
@@ -147,7 +147,7 @@
                                 <p:inputText id="nombre" required="true" value="#{clasesController.campo.nombre}"/> 
                                 
                                 <p:outputLabel for="from" value="Hora Inicio:" />
-                                <p:calendar id="from" timeZone="GMT+5" pattern="HH:mm" value="#{clasesController.campo.codhorainicio}"/>
+                                <p:calendar id="from" timeZone="GMT+5" pattern="dd/MM/yyyy HH:mm" value="#{clasesController.campo.codhorainicio}"/>
 
                                 <p:outputLabel for="to" value="Hora Final:" />
                                 <p:calendar id="to" timeZone="GMT+5" pattern="dd/MM/yyyy HH:mm" value="#{clasesController.campo.codhorafinal}"/>
