cambios al evaluar

--- a/ProyectoGrado/web/docentes/actualizar.xhtml
+++ b/ProyectoGrado/web/docentes/actualizar.xhtml
@@ -29,7 +29,7 @@
                         <p:inputText id="apellidos" required="true" value="#{docentesController.campo.apellidos}"/> 
 
                         <p:outputLabel value="Codigo:  " for="codigo" />
-                        <p:inputText id="codigo" required="true" value="#{docentesController.campo.codigo}"/> 
+                        <p:inputText id="codigo"  value="#{docentesController.campo.codigo}"/> 
 
                         <p:outputLabel value="Facultad:  " for="facultad" />
                         <p:selectOneMenu id="facultad" required="true" requiredMessage="No ha seleccionado"  value="#{docentesController.campo.facultad}"> 
