Ya guarda en el calendario, tambn modifica y elimina

--- a/ProyectoGrado/web/index_docentes.xhtml
+++ b/ProyectoGrado/web/index_docentes.xhtml
@@ -158,6 +158,7 @@
                                 </p:selectOneMenu>
 
                                 <f:facet name="footer">
+                                    <p:commandButton id="btnborrar" value="Borrar" actionListener="#{clasesController.borrar}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
                                     <p:commandButton id="btngrabar" value="Guardar" actionListener="#{clasesController.agregar}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
                                 </f:facet>
                             </h:panelGrid>
