--- a/ProyectoGrado/web/evaluaciones/actualizar.xhtml
+++ b/ProyectoGrado/web/evaluaciones/actualizar.xhtml
@@ -11,9 +11,8 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem url="#"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_docentes.xhtml"></p:menuitem>
-                        <p:menuitem value="Administracion de Actividades" url="/faces/actividades/administrar.xhtml"></p:menuitem>
-                        <p:menuitem value="Actualizacion de Actividades" url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_evaluador.xhtml"></p:menuitem>
+                        <p:menuitem value="Realizar Evaluacion" url="#"></p:menuitem>
                     </p:breadCrumb>
                 
                     <p:growl id="mensajes" sticky="true" showDetail="true"/>                
@@ -41,6 +40,7 @@
 
                         <f:facet name="footer">
                             <p:commandButton id="btngrabar" value="Calificar" ajax="true" action="#{actividadesController.guardarEvaluacion()}"/>
+                           
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>  
