Subida version modificada de la bd, se cambio los campos de horas por tipo timestamp Ya bota mensajes el de actividades Queda pendiente revisar si aun tiene la modificacion para la calificacion

--- a/ProyectoGrado/web/index_docentes.xhtml
+++ b/ProyectoGrado/web/index_docentes.xhtml
@@ -142,7 +142,7 @@
                         
                         <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="clip" hideEffect="clip">
                             
-                            <h:panelGrid id="eventDetails" columns="2" rendered="false">                           
+                            <h:panelGrid id="eventDetails" columns="2">                           
 
                                 <p:outputLabel value="Nombre:  " for="nombre" />
                                 <p:inputText id="nombre" required="true" value="#{clasesController.campo.nombre}"/> 
