--- a/ProyectoGrado/web/actividades/crear.xhtml
+++ b/ProyectoGrado/web/actividades/crear.xhtml
@@ -24,24 +24,23 @@
                     <p:panelGrid columns="2">
 
                         <p:outputLabel value="Nombre:  " for="nombre" />
-                        <p:inputText id="nombre" required="true" value="#{actividadesController.campo.nombre}"/> 
+                        <p:inputText id="nombre" value="#{actividadesController.campo.nombre}"/> 
 
                         <p:outputLabel value="Horas  " for="horas" />
-                        <p:inputText id="horas" required="true" value="#{actividadesController.campo.horas}"/> 
+                        <p:inputText id="horas" value="#{actividadesController.campo.horas}"/> 
 
                         <p:outputLabel value="Descripcion:  " for="descripcion" />
-                        <p:inputText id="descripcion" required="true" value="#{actividadesController.campo.descripcion}"/> 
+                        <p:inputText id="descripcion" value="#{actividadesController.campo.descripcion}"/> 
 
                         <p:outputLabel value="Responsable:  " for="responsable" />
-                        <p:inputText id="responsable" required="true" value="#{actividadesController.campo.responsable}"/> 
+                        <p:inputText id="responsable" value="#{actividadesController.campo.responsable}"/> 
 
                         <p:outputLabel value="Tipo Modalidad:  " for="codtipo" />
-                        <p:selectOneMenu id="codtipo" required="true" requiredMessage="No ha seleccionado" converter="tipoModalidadesConverter" value="#{actividadesController.campo.codtipo}"> 
-                            <f:selectItems value="#{tipoModalidadesController.combo('Selecione un opcion')}" />
+                        <p:selectOneMenu id="codtipo" value="#{actividadesController.codigo}"> 
+                            <f:selectItems value="#{tipoModalidadesController.combo('')}" />
                         </p:selectOneMenu>
-
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{actividadesController.agregar()}"/>
+                            <p:commandButton id="btngrabar" value="Guardar" actionListener="#{actividadesController.agregar()}"/>                             
                         </f:facet>
                     </p:panelGrid>
                 </p:panel> 
