--- a/ProyectoGrado/web/productos/crear.xhtml
+++ b/ProyectoGrado/web/productos/crear.xhtml
@@ -11,19 +11,19 @@
             <h:form>           
                 <p:panelGrid columns="2">                    
                     <p:outputLabel value="Descripcion:  " for="descripcion" />
-                    <p:inputText id="descripcion" required="true" value="#{productosController.campo.descripcion}"/> 
+                    <p:inputText id="descripcion" value="#{productosController.campo.descripcion}"/> 
 
                     <p:outputLabel value="Fecha de Compromiso:  " for="fechacompromiso" />                    
-                    <p:calendar id="fechacompromiso" required="true" showOn="button" value="#{productosController.campo.fechacompromiso}"></p:calendar>
+                    <p:calendar id="fechacompromiso" showOn="button" value="#{productosController.campo.fechacompromiso}"></p:calendar>
 
                     <p:outputLabel value="Fecha de Entrega:  " for="fechaentrega" />                   
-                    <p:calendar id="fechaentrega" required="false" showOn="button" value="#{productosController.campo.fechaentrega}"></p:calendar>
+                    <p:calendar id="fechaentrega" showOn="button" value="#{productosController.campo.fechaentrega}"></p:calendar>
 
                     <p:outputLabel value="Comentarios:  " for="comentarios" />
-                    <p:inputTextarea id="comentarios" required="false" value="#{productosController.campo.comentarios}"/> 
+                    <p:inputTextarea id="comentarios" value="#{productosController.campo.comentarios}"/> 
 
                     <p:outputLabel value="Actividad:  " for="codact" />
-                    <p:selectOneMenu id="codact" required="true" requiredMessage="No ha seleccionado" converter="actividadesConverter" value="#{productosController.campo.codactividad}"> 
+                    <p:selectOneMenu id="codact" value="#{productosController.codigo}"> 
                         <f:selectItems value="#{actividadesController.comboFiltrado('Selecione un opcion')}" />
                     </p:selectOneMenu>
 
