--- a/ProyectoGrado/web/actividades/actualizar.xhtml
+++ b/ProyectoGrado/web/actividades/actualizar.xhtml
@@ -11,25 +11,25 @@
             <h:form id="form">
                 <p:panel>
                     
-                    <p:growl id="mensajito" sticky="true" showDetail="true" autoUpdate="true"/>           
+                    <p:growl id="mensajito" sticky="true" showDetail="true"/>           
                     <br/>
                     <p:panelGrid columns="2">
 
                         <p:outputLabel value="Nombre:  " for="nombre" />
-                        <p:inputText id="nombre" required="true" value="#{actividadesController.campo.nombre}"/> 
+                        <p:inputText id="nombre" value="#{actividadesController.campo.nombre}"/> 
 
                         <p:outputLabel value="Horas  " for="horas" />
-                        <p:inputText id="horas" required="true" value="#{actividadesController.campo.horas}"/> 
+                        <p:inputText id="horas" value="#{actividadesController.campo.horas}"/> 
 
                         <p:outputLabel value="Descripcion:  " for="descripcion" />
-                        <p:inputText id="descripcion" required="true" value="#{actividadesController.campo.descripcion}"/> 
+                        <p:inputText id="descripcion" value="#{actividadesController.campo.descripcion}"/> 
 
                         <p:outputLabel value="Responsable:  " for="responsable" />
-                        <p:inputText id="responsable" required="true" value="#{actividadesController.campo.responsable}"/> 
+                        <p:inputText id="responsable" value="#{actividadesController.campo.responsable}"/> 
 
 
                         <p:outputLabel value="Tipo Modalidad:  " for="codtipo" />
-                        <p:selectOneMenu id="codtipo" required="true" requiredMessage="No ha seleccionado" converter="tipoModalidadesConverter" value="#{actividadesController.campo.codtipo}"> 
+                        <p:selectOneMenu id="codtipo" value="#{actividadesController.codigo}"> 
                             <f:selectItems value="#{tipoModalidadesController.combo('Selecione un opcion')}" />
                         </p:selectOneMenu>
 
