--- a/ProyectoGrado/web/productos/actualizar.xhtml
+++ b/ProyectoGrado/web/productos/actualizar.xhtml
@@ -8,13 +8,7 @@
     <ui:composition template="/plantilla.xhtml">
         <ui:define name="content">      
             <h:form>
-                <p:panel>
-                    <p:breadCrumb>
-                        <p:menuitem url="#"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.buscarDocente()}" url="/faces/index_docentes.xhtml"></p:menuitem>
-                        <p:menuitem value="Administracion de Productos" url="/faces/productos/administrar.xhtml"></p:menuitem>
-                        <p:menuitem value="Actualizacion de Productos" url="#"></p:menuitem>
-                    </p:breadCrumb>
+                <p:panel>                    
                  
                     <p:growl id="mensajes" sticky="true" showDetail="true"/>                
                     <br/>
@@ -23,10 +17,10 @@
                         <p:inputText id="descripcion" required="true" value="#{productosController.campo.descripcion}"/> 
 
                         <p:outputLabel value="Fecha de Compromiso:  " for="fechacompromiso" />                    
-                        <p:calendar id="fechacompromiso" required="true" showOn="button" value="#{productosController.campo.fechacompromiso}"></p:calendar>
+                        <p:calendar id="fechacompromiso" required="true" showOn="button" value="#{productosController.campo.fechacompromiso}"/>
 
                         <p:outputLabel value="Fecha de Entrega:  " for="fechaentrega" />                   
-                        <p:calendar id="fechaentrega" required="false" showOn="button" value="#{productosController.campo.fechaentrega}"></p:calendar>
+                        <p:calendar id="fechaentrega" required="false" showOn="button" value="#{productosController.campo.fechaentrega}"/>
 
                         <p:outputLabel value="Comentarios:  " for="comentarios" />
                         <p:inputTextarea id="comentarios" required="false" value="#{productosController.campo.comentarios}"/> 
