--- a/ProyectoGrado/web/productos/actualizar.xhtml
+++ b/ProyectoGrado/web/productos/actualizar.xhtml
@@ -14,10 +14,10 @@
                     <br/>
                     <p:panelGrid columns="2">                    
                         <p:outputLabel value="Descripcion:  " for="descripcion" />
-                        <p:inputText id="descripcion" required="true" value="#{productosController.campo.descripcion}"/> 
+                        <p:inputText id="descripcion" value="#{productosController.campo.descripcion}"/> 
 
                         <p:outputLabel value="Fecha de Compromiso:  " for="fechacompromiso" />                    
-                        <p:calendar id="fechacompromiso" required="true" showOn="button" value="#{productosController.campo.fechacompromiso}"/>
+                        <p:calendar id="fechacompromiso" showOn="button" value="#{productosController.campo.fechacompromiso}"/>
 
                         <p:outputLabel value="Fecha de Entrega:  " for="fechaentrega" />                   
                         <p:calendar id="fechaentrega" required="false" showOn="button" value="#{productosController.campo.fechaentrega}"/>
@@ -26,8 +26,8 @@
                         <p:inputTextarea id="comentarios" required="false" value="#{productosController.campo.comentarios}"/> 
 
                         <p:outputLabel value="Actividad:  " for="codact" />
-                        <p:selectOneMenu id="codact" required="true" requiredMessage="No ha seleccionado" converter="actividadesConverter" value="#{productosController.campo.codactividad}"> 
-                            <f:selectItems value="#{actividadesController.combo('Selecione un opcion')}" />
+                        <p:selectOneMenu id="codact" value="#{productosController.codigo}"> 
+                            <f:selectItems value="#{actividadesController.comboFiltrado('Selecione un opcion')}" />
                         </p:selectOneMenu>
 
                         <f:facet name="footer">
