Arregle la vista del admin

--- a/ProyectoGrado/web/convenciones/crear.xhtml
+++ b/ProyectoGrado/web/convenciones/crear.xhtml
@@ -9,18 +9,11 @@
         <ui:define name="content">
             #{convencionesController.resetear()}
             <h:form>
-                <p:panel>
-                    <p:breadCrumb>
-                        <p:menuitem url="#"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_admin.xhtml"></p:menuitem>
-                        <p:menuitem value="Creacion de Convenciones" url="#"></p:menuitem>
-                    </p:breadCrumb>
-                  
-                    <p:growl id="mensajes" sticky="true" showDetail="true"/>                
+                <p:panel>        
                     <br/>
                     <p:panelGrid columns="2">                    
                         <p:outputLabel value="Nombre:  " for="nombre" />
-                        <p:inputText id="nombre" required="true" value="#{convencionesController.campo.nombre}"/> 
+                        <p:inputText id="nombre" value="#{convencionesController.campo.nombre}"/> 
 
                         <p:outputLabel value="Color  " for="color" />
                         <p:colorPicker id="color" value="#{convencionesController.campo.color}" /> 
