--- a/ProyectoGrado/web/index_evaluador.xhtml
+++ b/ProyectoGrado/web/index_evaluador.xhtml
@@ -18,7 +18,7 @@
                     <p:panelGrid columns="3" style="border-color: gray; border-width: 2px; border-style: double">
                         <p:outputLabel value="Docente:  " for="doc" />
                         <p:selectOneMenu id="doc" required="false" requiredMessage="No ha seleccionado" value="#{actividadesController.campo.coddocente}" converter="docentesConverter"> 
-                            <f:selectItems value="#{docentesController.combo('Seleccion un Docente')}" />
+                            <f:selectItems value="#{docentesController.combo('Seleccione un Docente')}" />
                         </p:selectOneMenu>
                         <p:commandButton value="Buscar" update="listar" actionListener="#{actividadesController.btnBuscar()}">
                                                       
