Elimine lo relacionado con reportes Cambie el nombre del de Diagrama de Clases

--- a/ProyectoGrado/web/permiso_denegado.xhtml
+++ b/ProyectoGrado/web/permiso_denegado.xhtml
@@ -14,7 +14,7 @@
                             Permiso Denegado
                         </f:facet>
                         
-                        usted no esta autorizado para ingresar
+                        Usted no esta autorizado para ingresar
                     </p:panelGrid>
                 </p:panel>
             </h:form>
