--- a/ProyectoGrado/web/actividades/actualizar.xhtml
+++ b/ProyectoGrado/web/actividades/actualizar.xhtml
@@ -15,27 +15,27 @@
                     <br/>
                     <p:panelGrid columns="2">
 
-                        <p:outputLabel value="Nombre:  " for="nombre" />
+                        <p:outputLabel value="#{actividadesTxt.nombre} " for="nombre" />
                         <p:inputText id="nombre" value="#{actividadesController.campo.nombre}"/> 
 
-                        <p:outputLabel value="Horas  " for="horas" />
+                        <p:outputLabel value="#{actividadesTxt.horas}  " for="horas" />
                         <p:inputText id="horas" value="#{actividadesController.campo.horas}"/> 
 
-                        <p:outputLabel value="Descripcion:  " for="descripcion" />
+                        <p:outputLabel value="#{actividadesTxt.descripcion}  " for="descripcion" />
                         <p:inputText id="descripcion" value="#{actividadesController.campo.descripcion}"/> 
 
-                        <p:outputLabel value="Responsable:  " for="responsable" />
+                        <p:outputLabel value="#{actividadesTxt.responsable}  " for="responsable" />
                         <p:inputText id="responsable" value="#{actividadesController.campo.responsable}"/> 
 
 
-                        <p:outputLabel value="Tipo Modalidad:  " for="codtipo" />
+                        <p:outputLabel value="#{actividadesTxt.tipoMod}  " for="codtipo" />
                         <p:selectOneMenu id="codtipo" value="#{actividadesController.codigo}"> 
                             <f:selectItems value="#{tipoModalidadesController.combo('Selecione un opcion')}" />
                         </p:selectOneMenu>
 
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Actualizar" ajax="true" action="#{actividadesController.actualizar()}"/>                                
+                            <p:commandButton id="btngrabar" value="#{actividadesTxt.actualizar}" ajax="true" action="#{actividadesController.actualizar()}"/>                                
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>  
