--- a/ProyectoGrado/web/docentes/crear.xhtml
+++ b/ProyectoGrado/web/docentes/crear.xhtml
@@ -19,45 +19,44 @@
                     <p:growl id="mensajes" sticky="true" showDetail="true"/>                
                     <br/>
                     <p:panelGrid columns="2">                    
-                        <p:outputLabel value="Cedula:  " for="cedula" />
+                        <p:outputLabel value="#{docentesTxt.cedula}  " for="cedula" />
                         <p:inputText id="cedula" required="true" value="#{docentesController.campo.cedula}"/> 
 
-                        <p:outputLabel value="Nombres:  " for="nombres" />
+                        <p:outputLabel value="#{docentesTxt.nombre}  " for="nombres" />
                         <p:inputText id="nombres" required="true" value="#{docentesController.campo.nombres}"/> 
 
-                        <p:outputLabel value="Apellidos:  " for="apellidos" />
+                        <p:outputLabel value="#{docentesTxt.apellido}  " for="apellidos" />
                         <p:inputText id="apellidos" required="true" value="#{docentesController.campo.apellidos}"/> 
 
-                        <p:outputLabel value="Codigo:  " for="codigo" />
-                        <p:inputText id="codigo" required="false" value="#{docentesController.campo.codigo}"/> 
+                        <p:outputLabel value="#{docentesTxt.codigo}  " for="codigo" />
+                        <p:inputText id="codigo"  value="#{docentesController.campo.codigo}"/> 
 
-                        <p:outputLabel value="Facultad:  " for="facultad" />
+                        <p:outputLabel value="#{docentesTxt.facultad}  " for="facultad" />
                         <p:selectOneMenu id="facultad" required="true" requiredMessage="No ha seleccionado"  value="#{docentesController.campo.facultad}"> 
                             <f:selectItem itemValue="1" itemLabel="Ciencias Naturales e Ingenierias"/>
                             <f:selectItem itemValue="2" itemLabel="Ciencias Socioeconomicas y Empresariales" />
                         </p:selectOneMenu>
 
-                        <p:outputLabel value="Unidad Academica:  " for="unidad" />
+                        <p:outputLabel value="#{docentesTxt.unidadAcadem}  " for="unidad" />
                         <p:inputText id="unidad" required="true" value="#{docentesController.campo.unidad}"/> 
 
-                        <p:outputLabel value="Semestre - Año:  " for="semestre" />
+                        <p:outputLabel value="#{docentesTxt.semestre}  " for="semestre" />
                         <p:inputText id="semestre" required="true" value="#{docentesController.campo.semestre}"/> 
 
-
-                        <p:outputLabel value="Formacion:  " for="formacion" />
+                        <p:outputLabel value="#{docentesTxt.formacion}  " for="formacion" />
                         <p:inputTextarea id="formacion" required="true" value="#{docentesController.campo.formacion}"/>                     
 
-                        <p:outputLabel value="Direccion:  " for="direccion" />
+                        <p:outputLabel value="#{docentesTxt.direccion}  " for="direccion" />
                         <p:inputText id="direccion" required="true" value="#{docentesController.campo.direccion}"/> 
 
-                        <p:outputLabel value="Telefono:  " for="telefono" />
+                        <p:outputLabel value="#{docentesTxt.telefono}  " for="telefono" />
                         <p:inputText id="telefono" required="true" value="#{docentesController.campo.telefono}"/> 
 
-                        <p:outputLabel value="Correo:  " for="correo" />
+                        <p:outputLabel value="#{docentesTxt.correo}  " for="correo" />
                         <p:inputText id="correo" required="true" value="#{docentesController.campo.correo}"/> 
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{docentesController.agregar()}"/>
+                            <p:commandButton id="btngrabar" value="#{docentesTxt.crear}" ajax="true" action="#{docentesController.agregar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>
